--- a/style.css
+++ b/style.css
@@ -12,38 +12,45 @@ body {
 h1 {
   text-align: center;
 }
+
+.switch {
+  position: fixed;
+  top: 20px;
+  right: 20px;
+}
 .data-entry {
   margin-top: 40px;
   text-align: center;
 }
 .city {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    gap: 12px;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  gap: 12px;
 }
 label {
-    font-size: 16px;
+  font-size: 16px;
 }
-input, select {
-    padding: 10px;
-    border-radius: 8px;
-    border: none;
-    outline: none;
-    font-size: 16px;
+input,
+select {
+  padding: 10px;
+  border-radius: 8px;
+  border: none;
+  outline: none;
+  font-size: 16px;
 }
 button {
-    padding: 10px;
-    background: #0984e3;
-    color: white;
-    border: none;
-    border-radius: 8px;
-    cursor: pointer;
-    font-size: 18px;
-    transition: 0.3s;
+  padding: 10px;
+  background: #0984e3;
+  color: white;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  font-size: 18px;
+  transition: 0.3s;
 }
 button:hover {
-    background: #74b9ff;
+  background: #74b9ff;
 }
 .city button:hover {
   background: #0c6bd6;
@@ -60,4 +67,26 @@ button:hover {
 }
 .weather-icon {
   width: 120px;
+}
+
+.dark-theme {
+  background: linear-gradient(135deg, #121212, #333333); /* Tumšs fons */
+  color: #e0e0e0; /* Gaišs teksts visam */
+}
+/* peredelka items na dark themi */
+.dark-theme h1,
+.dark-theme label {
+  color: #e0e0e0;
+}
+.dark-theme input,
+.dark-theme select {
+  background-color: #444;
+  color: #e0e0e0;
+}
+.dark-theme button {
+  background: #007bff; /* podgon kraski knopki */
+}
+.dark-theme #weatherInfo {
+  background: rgba(255, 255, 255, 0.1); /* prozracnij na temnom fone */
+  box-shadow: 0 4px 12px rgba(255, 255, 255, 0.05);
 }
